--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@cloudflare/workers-types": "^4.20240909.0",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-cloudflare": "^4.7.2",
+    "@sveltejs/enhanced-img": "^0.3.7",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/eslint": "^9.6.0",
@@ -33,5 +34,10 @@
     "vite": "^5.0.3",
     "wrangler": "^3.78.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@auth/sveltekit": "^1.4.2",
+    "@picocss/pico": "^2.0.6",
+    "lucide-svelte": "^0.441.0"
+  }
 }
