--- a/package.json
+++ b/package.json
@@ -14,30 +14,34 @@
     "cf-typegen": "wrangler types && mv worker-configuration.d.ts src/"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240909.0",
-    "@sveltejs/adapter-auto": "^3.0.0",
+    "@cloudflare/workers-types": "^4.20240919.0",
+    "@sveltejs/adapter-auto": "^3.2.5",
     "@sveltejs/adapter-cloudflare": "^4.7.2",
-    "@sveltejs/enhanced-img": "^0.3.7",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@types/eslint": "^9.6.0",
-    "eslint": "^9.0.0",
+    "@sveltejs/enhanced-img": "^0.3.8",
+    "@sveltejs/kit": "^2.5.28",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@types/eslint": "^9.6.1",
+    "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0",
-    "globals": "^15.0.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.0.3",
-    "wrangler": "^3.78.2"
+    "eslint-plugin-svelte": "^2.44.0",
+    "globals": "^15.9.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.6",
+    "prisma": "^5.19.1",
+    "svelte": "^4.2.19",
+    "svelte-check": "^4.0.2",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0",
+    "vite": "^5.4.7",
+    "wrangler": "^3.78.7"
   },
   "type": "module",
   "dependencies": {
-    "@auth/sveltekit": "^1.4.2",
+    "@auth/prisma-adapter": "^2.5.0",
+    "@auth/sveltekit": "^1.5.0",
     "@picocss/pico": "^2.0.6",
-    "lucide-svelte": "^0.441.0"
+    "@prisma/adapter-d1": "^5.19.1",
+    "@prisma/client": "^5.19.1",
+    "lucide-svelte": "^0.445.0"
   }
 }
