--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
     "deploy": "npm run build && wrangler pages deploy",
-    "cf-typegen": "wrangler types && mv worker-configuration.d.ts src/"
+    "cf-typegen": "wrangler types && mv worker-configuration.d.ts src/",
+    "postinstall": "npx patch-package"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240919.0",
