--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
-    "prisma": "^5.19.1",
+    "prisma": "^5.20.0",
     "svelte": "^4.2.19",
     "svelte-check": "^4.0.2",
     "typescript": "^5.6.2",
@@ -42,7 +42,9 @@
     "@auth/sveltekit": "^1.5.0",
     "@picocss/pico": "^2.0.6",
     "@prisma/adapter-d1": "^5.19.1",
-    "@prisma/client": "^5.19.1",
-    "lucide-svelte": "^0.445.0"
+    "@prisma/client": "^5.20.0",
+    "lucide-svelte": "^0.445.0",
+    "zod": "^3.23.8",
+    "zod-form-data": "^2.0.2"
   }
 }
