--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
   "type": "module",
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
-    "@auth/sveltekit": "^1.5.0",
+    "@auth/sveltekit": "1.5.0",
     "@picocss/pico": "^2.0.6",
     "@prisma/adapter-d1": "^5.19.1",
     "@prisma/client": "^5.20.0",
     "just-omit": "^2.2.0",
+    "just-pick": "^4.2.0",
     "lucide-svelte": "^0.445.0",
     "zod": "^3.23.8",
     "zod-form-data": "^2.0.2"
