--- a/package.json
+++ b/package.json
@@ -24,18 +24,19 @@
     "@cloudflare/workers-types": "^4.20240919.0",
     "@sveltejs/adapter-auto": "^3.2.5",
     "@sveltejs/adapter-cloudflare": "^4.7.2",
-    "@sveltejs/enhanced-img": "^0.3.8",
+    "@sveltejs/enhanced-img": "^0.3.9",
     "@sveltejs/kit": "^2.5.28",
-    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/eslint": "^9.6.1",
     "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.44.0",
+    "eslint-plugin-svelte": "^2.45.1",
+    "estree-walker": "^3.0.3",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
     "prisma": "^5.20.0",
-    "svelte": "^4.2.19",
+    "svelte": "^5.0.0",
     "svelte-check": "^4.0.2",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0",
@@ -45,7 +46,7 @@
   "type": "module",
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
-    "@auth/sveltekit": "1.5.0",
+    "@auth/sveltekit": "^1.7.2",
     "@picocss/pico": "^2.0.6",
     "@prisma/adapter-d1": "^5.19.1",
     "@prisma/client": "^5.20.0",
